# ANONCOM

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
ANONCOM/: manage.py  myEnvVar.py  requirements.txt
ANONCOM/ANONCOM/: asgi.py  myEnvVar.py  settings.py  urls.py  wsgi.py
ANONCOM/blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ANONCOM/blog/migrations/: 0001_initial.py  0002_post_anon_comments.py  0003_remove_post_anon_author_anoncomments.py
ANONCOM/blog/static/blog/: main.css
ANONCOM/users/: forms.py  models.py  signals.py  views.py
ANONCOM/users/migrations/: 0001_initial.py  0002_alter_profile_image.py  0003_alter_profile_image.py  0004_alter_profile_image.py
anoncom/: manage.py
anoncom/accounts/: urls.py  views.py
anoncom/anoncom/: asgi.py  settings.py  urls.py  wsgi.py
anoncom/newsfeed/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
anoncom/newsfeed/migrations/: 0001_initial.py  0002_alter_comment_comment_author.py  0002_rename_news_comment_post_title.py  0003_comment_pub_date_alter_allpost_pub_date.py  0004_alter_allpost_post_text.py  0005_alter_allpost_pub_date_alter_comment_pub_date.py  0006_alter_comment_post_title.py
anoncom/templates/registration/: login.html
anoncom/users/: admin.py  forms.py  models.py  urls.py  views.py
anoncom/users/migrations/: 0001_initial.py
anoncom/users/templates/: base.html  home.html  signup.html
tutorial_django/mysite/mysite/: settings.py
tutorial_django/mysite/polls/: admin.py  models.py  tests.py  views.py
(+27 files in other folders)
