[tool.poetry]
name = "ANONCOM"
version = "0.1"
description = "ANONCOM for IB."
repository = "https://github.com/Freddsle/ANONCOM/"
authors = ["Yuliya Burankova, Anna Toidze, Dmitrii Podgalo, Elena Grigoreva, Alexandra Gorbonos"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Django = "^4.0.4"
asgiref = "^3.5.1"
certifi = "^2021.10.8"
django-crispy-forms = "^1.14.0"
Pillow = "^9.1.0"
sqlparse = "^0.4.2"

